[package]
name = "kvs"
version = "0.1.0"
description = "A Key-Value Store"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.3.21", features = ["derive"] }
tokio = { version = "1.32.0", features = ["full"] }
bytes = "1.4.0"

[dev-dependencies]
assert_cmd = "2.0.12"
predicates = "3.0.3"
