[package]
name = "kvs"
version = "0.1.0"
description = "A Key-Value Store"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "kvs-cli"
path = "src/bin/cli.rs"

[[bin]]
name = "kvs-server"
path = "src/bin/server.rs"

[dependencies]
clap = { version = "4.3.21", features = ["derive"] }
tokio = { version = "1.32.0", features = ["full", "tracing"] }
tokio-util = { version = "0.6", features = ["codec"] }
futures = "0.3"
bytes = "1.4.0"
anyhow = "1.0.86"
console-subscriber = "0.3.0"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
opentelemetry = "0.23.0"
opentelemetry_sdk = { version = "0.23.0", features = ["rt-tokio"] }
opentelemetry-otlp = { version = "0.16.0", features = ["tonic"] }
opentelemetry-semantic-conventions = "0.15.0"
